RESOLVED FIXED86245
[TextureMapper] Tiles are not created for large textures
https://bugs.webkit.org/show_bug.cgi?id=86245
Summary [TextureMapper] Tiles are not created for large textures
Martin Robinson
Reported 2012-05-11 13:04:41 PDT
When the backing store is a large texture, tiles are not created for it.
Attachments
Patch (8.04 KB, patch)
2012-05-11 13:43 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-05-11 13:43:04 PDT
WebKit Review Bot
Comment 2 2012-05-11 19:10:24 PDT
Comment on attachment 141487 [details] Patch Clearing flags on attachment: 141487 Committed r116834: <http://trac.webkit.org/changeset/116834>
WebKit Review Bot
Comment 3 2012-05-11 19:10:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.